<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


   <TableLayout
       android:id="@+id/tableLayout"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:layout_constraintTop_toTopOf="parent"
       android:background="@drawable/rounded_card"
       android:padding="20dp"
       android:gravity="center"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       android:layout_margin="10dp">
      <TableRow
          android:id="@+id/tr1">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/black"
             android:textStyle="bold"
             android:text="@string/pull_date"
             android:layout_margin="5dp"
             android:textSize="@dimen/text_size"/>
         <TextView
             android:id="@+id/pull_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:textColor="@color/black"
             android:textSize="@dimen/text_size"/>
      </TableRow>
      <TableRow
          >
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/black"
             android:layout_margin="5dp"
             android:textStyle="bold"
             android:text="@string/name"
             android:textSize="@dimen/text_size"/>
         <TextView
             android:id="@+id/name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:layout_weight="1"
             android:textColor="@color/black"
             android:textSize="@dimen/text_size"/>
      </TableRow>
      <TableRow>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/black"
             android:layout_margin="5dp"
             android:textStyle="bold"
             android:text="@string/ntc"
             android:textSize="@dimen/text_size"/>
         <TextView
             android:id="@+id/ntc"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:textColor="@color/black"
             android:textSize="@dimen/text_size"/>
      </TableRow>
      <TableRow>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/black"
             android:layout_margin="5dp"
             android:textStyle="bold"
             android:text="@string/score"
             android:textSize="@dimen/text_size"/>
         <TextView
             android:id="@+id/score"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/black"
             android:layout_margin="5dp"
             android:textSize="@dimen/text_size"/>
      </TableRow>
      <TableRow>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/black"
             android:layout_margin="5dp"
             android:text="@string/number_of_account"
             android:textStyle="bold"
             android:textSize="@dimen/text_size"/>
         <TextView
             android:id="@+id/number_of_account"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/black"
             android:layout_margin="5dp"
             android:textSize="@dimen/text_size"/>
      </TableRow>
      <TableRow>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/black"
             android:layout_margin="5dp"
             android:textStyle="bold"
             android:text="@string/number_of_account_overdue"
             android:textSize="@dimen/text_size"/>
         <TextView
             android:id="@+id/number_of_account_overdue"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/black"
             android:layout_margin="5dp"
             android:textSize="@dimen/text_size"/>
      </TableRow>
      <TableRow>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/black"
             android:layout_margin="5dp"
             android:text="@string/number_of_account_active"
             android:textStyle="bold"
             android:textSize="@dimen/text_size"/>
         <TextView
             android:id="@+id/number_of_account_active"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/black"
             android:layout_margin="5dp"
             android:textSize="@dimen/text_size"/>
      </TableRow>
      <TableRow>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/black"
             android:layout_margin="5dp"
             android:text="@string/number_of_account_active_overdue"
             android:textStyle="bold"
             android:textSize="@dimen/text_size"/>
         <TextView
             android:id="@+id/number_of_account_active_overdue"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/black"
             android:layout_margin="5dp"
             android:textSize="@dimen/text_size"/>
      </TableRow>
      <TableRow>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/black"
             android:layout_margin="5dp"
             android:textStyle="bold"
             android:text="@string/number_of_account_with_alert"
             android:textSize="@dimen/text_size"/>
         <TextView
             android:id="@+id/number_of_account_with_alert"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/black"
             android:layout_margin="5dp"
             android:textSize="@dimen/text_size"/>
      </TableRow>
      <TableRow>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/black"
             android:layout_margin="5dp"
             android:textStyle="bold"
             android:text="@string/number_of_total_alert"
             android:textSize="@dimen/text_size"/>
         <TextView
             android:id="@+id/number_of_total_alert"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/black"
             android:layout_margin="5dp"
             android:textSize="@dimen/text_size"/>
      </TableRow>
      <TableRow>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/black"
             android:layout_margin="5dp"
             android:textStyle="bold"
             android:text="@string/inquiries_24_months"
             android:textSize="@dimen/text_size"/>
         <TextView
             android:id="@+id/inquiries_24_months"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/black"
             android:layout_margin="5dp"
             android:textSize="@dimen/text_size"/>
      </TableRow>
      <TableRow>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/black"
             android:layout_margin="5dp"
             android:textStyle="bold"
             android:text="@string/inquiries_3_months"
             android:textSize="@dimen/text_size"/>
         <TextView
             android:id="@+id/inquiries_3_months"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/black"
             android:layout_margin="5dp"
             android:textSize="@dimen/text_size"/>
      </TableRow>
      <TableRow>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/black"
             android:layout_margin="5dp"
             android:text="@string/new_account_24_months"
             android:textStyle="bold"
             android:textSize="@dimen/text_size"/>
         <TextView
             android:id="@+id/new_account_24_months"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/black"
             android:layout_margin="5dp"
             android:textSize="@dimen/text_size"/>
      </TableRow>
      <TableRow>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/black"
             android:layout_margin="5dp"
             android:text="@string/new_account_3_months"
             android:textStyle="bold"
             android:textSize="@dimen/text_size"/>
         <TextView
             android:id="@+id/new_account_3_months"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/black"
             android:layout_margin="5dp"
             android:textSize="@dimen/text_size"/>
      </TableRow>
      <TableRow>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/black"
             android:layout_margin="5dp"
             android:text="@string/new_account_amount_3_months"
             android:textStyle="bold"
             android:textSize="@dimen/text_size"/>
         <TextView
             android:id="@+id/new_account_amount_3_months"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/black"
             android:layout_margin="5dp"
             android:textSize="@dimen/text_size"/>
      </TableRow>
   </TableLayout>
   <ImageView
       android:id="@+id/image_left"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       android:visibility="gone"
       app:layout_constraintBottom_toTopOf="@id/tableLayout"
       android:layout_marginLeft="10dp"
       android:layout_marginBottom="10dp"
       android:src="@drawable/left_arrow"
       />
   <ImageView
       android:id="@+id/image_right"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:src="@drawable/right_arrow"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       android:layout_marginBottom="10dp"
       app:layout_constraintBottom_toTopOf="@id/tableLayout"
       android:layout_marginRight="10dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>