<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    tools:context=".SelectOptionsActivity">
    <data>

    <variable
        name="viewModel"
        type="com.navadhan.viewmodel.SelectOptionsViewModel" />
</data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="18sp"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:text="@string/select_options"
            android:textColor="@color/white"
            android:background="@color/backgroundColor"
            android:layout_marginBottom="20dp"
            />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <Button
            android:id="@+id/btnHeatmap"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/heatmap"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@drawable/button_rounded"
            android:layout_margin="20dp"
            />
        <Button
            android:id="@+id/btnSummary"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/summary"
            android:textStyle="bold"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:background="@drawable/button_rounded"
            android:layout_margin="20dp"
            />
        <Button
            android:id="@+id/btnObligation"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/obligation"
            android:textStyle="bold"
            android:textSize="14sp"
            android:background="@drawable/button_rounded"
            android:layout_margin="20dp"
            android:textColor="@color/white"
            />
    </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>