<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tableObligationData"
        android:background="@drawable/rounded_card"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="20dp"
        android:layout_margin="20dp">
        <TableRow
            android:id="@+id/tr1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/credit_guarantor"
                android:textStyle="bold"
                android:layout_margin="5dp"
                android:textSize="@dimen/text_size"/>
            <TextView
                android:id="@+id/credit_guarantor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size"/>
        </TableRow>
        <TableRow
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_margin="5dp"
                android:text="@string/ownership"
                android:textStyle="bold"
                android:textSize="@dimen/text_size"/>
            <TextView
                android:id="@+id/ownership"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_margin="5dp"
                android:text="@string/applicant_name"
                android:textStyle="bold"
                android:textSize="@dimen/text_size"/>
            <TextView
                android:id="@+id/applicant_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_margin="5dp"
                android:text="@string/account_type"
                android:textStyle="bold"
                android:textSize="@dimen/text_size"/>
            <TextView
                android:id="@+id/account_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:textSize="@dimen/text_size"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_margin="5dp"
                android:text="@string/disbursed_amount"
                android:textStyle="bold"
                android:textSize="@dimen/text_size"/>
            <TextView
                android:id="@+id/disbursed_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_margin="5dp"
                android:textSize="@dimen/text_size"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_margin="5dp"
                android:text="@string/current_balance"
                android:textStyle="bold"
                android:textSize="@dimen/text_size"/>
            <TextView
                android:id="@+id/current_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_margin="5dp"
                android:textSize="@dimen/text_size"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_margin="5dp"
                android:text="@string/monthly_instalment"
                android:textStyle="bold"
                android:textSize="@dimen/text_size"/>
            <TextView
                android:id="@+id/monthly_instalment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_margin="5dp"
                android:textSize="@dimen/text_size"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_margin="5dp"
                android:text="@string/in_cb_report"
                android:textStyle="bold"
                android:textSize="@dimen/text_size"/>
            <TextView
                android:id="@+id/in_cb_report"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_margin="5dp"
                android:textSize="@dimen/text_size"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_margin="5dp"
                android:text="@string/is_dpd"
                android:textStyle="bold"
                android:textSize="@dimen/text_size"/>
            <TextView
                android:id="@+id/is_dpd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_margin="5dp"
                android:textSize="@dimen/text_size"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_margin="5dp"
                android:text="@string/days"
                android:textStyle="bold"
                android:textSize="@dimen/text_size"/>
            <TextView
                android:id="@+id/days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_margin="5dp"
                android:textSize="@dimen/text_size"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_margin="5dp"
                android:text="@string/start_month"
                android:textStyle="bold"
                android:textSize="@dimen/text_size"/>
            <TextView
                android:id="@+id/start_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_margin="5dp"
                android:textSize="@dimen/text_size"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_margin="5dp"
                android:text="@string/end_month"
                android:textStyle="bold"
                android:textSize="@dimen/text_size"/>
            <TextView
                android:id="@+id/end_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_margin="5dp"
                android:textSize="@dimen/text_size"/>
        </TableRow>

    </TableLayout>
    <ImageView
        android:id="@+id/image_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tableObligationData"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/left_arrow"
        />
    <ImageView
        android:id="@+id/image_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/right_arrow"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/tableObligationData"
        android:layout_marginRight="10dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>